group 'java'
version '1.0-SNAPSHOT'

apply plugin: 'application'

sourceCompatibility = 9

repositories {
    mavenCentral()
}

mainClassName = 'com.nedap.university.erik.dominoeffect.DominoEffect'

jar {
    manifest {
        attributes 'Main-Class': mainClassName
    }
}

buildscript {
    repositories {
        mavenCentral()
        // The following is only necessary if you want to use SNAPSHOT releases.
        // maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    }
    dependencies {
        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.1'
    }
}

apply plugin: 'org.junit.platform.gradle.plugin'

junitPlatform {
    platformVersion '1.0.0'
    // logManager 'org.apache.logging.log4j.jul.LogManager'
    // reportsDir file('build/test-results/junit-platform') // this is the default
    // enableStandardTestTask true
    // selectors (optional)
    // filters (optional)
}

dependencies {
    testCompile("org.junit.jupiter:junit-jupiter-api:5.0.1")
    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.1")
}

dependencies {
    testCompile("junit:junit:4.12")
    testRuntime("org.junit.vintage:junit-vintage-engine:4.12.1")
    testCompileOnly('org.apiguardian:apiguardian-api:1.0.0')
}

